# rust-elgamal

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
src/: commitment.rs  decrypt.rs  encrypt.rs  lib.rs  open.rs
