[package]
name = "rust-elgamal"
version = "0.5.1"
authors = ["Eleanor McMurtry <elem0@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eleanor-em/rust-elgamal"
documentation = "https://docs.rs/rust-elgamal"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "ristretto", "ristretto255", "elgamal"]
description = "A straightforward implementation of ElGamal homomorphic encryption using the ristretto255 elliptic curve group."

[features]
# cannot call the feature "serde" (yet)
enable-serde = ["serde", "curve25519-dalek/serde"]

[dependencies]
curve25519-dalek = { package = "curve25519-dalek", version = "4", features = ["alloc", "rand_core", "precomputed-tables", "zeroize"] }
rand_core = { version = "0.6" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1"
rand = { version = "0.8" }
